# m17

./: .gitignore  AGENTS.md  AIDER.md  Cargo.toml  README.md  SPEC.md  architect.prompt.md  config.toml  config.toml.example  context.py
.github/workflows/: ci.yml
aggregations/: Cargo.toml
aggregations/src/: lib.rs
classifier/: Cargo.toml
classifier/src/: greeks.rs  lib.rs
core-types/: Cargo.toml
core-types/src/: config.rs  data_client.rs  lib.rs  opra.rs  raw.rs  retry.rs  schema.rs  status.rs  types.rs  uid.rs
data-client/: Cargo.toml
data-client/src/: lib.rs
diptest/: Cargo.toml  README.md
diptest/src/: algorithm.rs  bootstrap.rs  consts.rs  lib.rs
diptest/tests/: diptest_rs.rs
diptest/tests/data/: sample_data.rs
docs/: greeks-enrichment-separation.md  greeks-enrichment-task-list.md  interface-thoughts.md  ledger-controller-spec.md  trading-calendar.md  ws-options-trades.md
docs/massive/: flat-files-equity-trades.md  flat-files-options-quotes.md  flat-files-overview.md  option-chain-snapshot.md  rest-options-overview.md  treasury-yields.md  ws-guide.md  ws-options-overview.md  ws-options-quotes.md  ws-stocks-overview.md  ws-stocks-quotes.md  ws-stocks-trades.md
docs/massive/docs/massive/: flat-files-options-overview.md  flat-files-options-trades.md
docs/runbooks/: treasury-rebuild.md
engine-api/: Cargo.toml
engine-api/src/: lib.rs
flatfile-ingestion-service/: Cargo.toml
flatfile-ingestion-service/src/: checkpoint.rs  lib.rs
flatfile-source/: Cargo.toml
flatfile-source/src/: lib.rs
gc-engine/: Cargo.toml
gc-engine/src/: lib.rs
greeks-engine/: Cargo.toml
greeks-engine/src/: lib.rs
greeks-enrichment-service/: Cargo.toml
greeks-enrichment-service/src/: lib.rs  source.rs  state.rs  writer.rs
ledger/: Cargo.toml
ledger/src/: config.rs  controller.rs  error.rs  ledger.rs  lib.rs  mapping.rs  payload.rs  storage.rs  symbol_map.rs  window.rs
m17/: Cargo.toml
m17/src/: aggregation.rs  config.rs  greeks.rs  main.rs  metrics.rs
metrics/: Cargo.toml
metrics/src/: lib.rs
nbbo-cache/: Cargo.toml
nbbo-cache/src/: lib.rs
nbbo-engine/: Cargo.toml
nbbo-engine/src/: lib.rs
options-universe-ingestion-service/: Cargo.toml
options-universe-ingestion-service/src/: lib.rs
orchestrator/: Cargo.toml
orchestrator/src/: main.rs
quote-backfill-engine/: Cargo.toml
quote-backfill-engine/src/: lib.rs  metrics.rs
realtime-ws-ingestion-service/: Cargo.toml
realtime-ws-ingestion-service/src/: lib.rs
replayer/: Cargo.toml
replayer/src/: lib.rs
rest-source/: Cargo.toml
rest-source/src/: lib.rs
scripts/: diagnostics_report.sh
storage/: Cargo.toml
storage/src/: lib.rs
trade-flatfile-engine/: Cargo.toml
trade-flatfile-engine/src/: artifacts.rs  config.rs  download_metrics.rs  errors.rs  lib.rs  minute_bucket.rs  window_bucket.rs
trade-ws-engine/: Cargo.toml
trade-ws-engine/src/: lib.rs  metrics.rs
treasury-engine/: Cargo.toml
treasury-engine/src/: lib.rs
treasury-ingestion-service/: Cargo.toml
treasury-ingestion-service/src/: lib.rs
tui/: Cargo.toml
tui/src/: lib.rs
window-space/: Cargo.toml  README.md
window-space/src/: config.rs  controller.rs  error.rs  ledger.rs  lib.rs  mapping.rs  payload.rs  slot_metrics.rs  storage.rs  symbol_map.rs  window.rs
ws-source/: Cargo.toml  SPEC.md
ws-source/src/: lib.rs  worker.rs
