[workspace]
resolver = "2"

members = [
  "classifier",
  "core-types",
  "data-client",
  "flatfile-source",
  "flatfile-ingestion-service",
  "aggregations",
  "diptest",
  "metrics",
  "nbbo-cache",
  "options-universe-ingestion-service",
  "realtime-ws-ingestion-service",
  "orchestrator",
  "replayer",
  "storage",
  "treasury-ingestion-service",
  "tui",
  "ws-source",
  "greeks-engine",
  "greeks-enrichment-service",
  "window-space", "m17", "engine-api", "trade-flatfile-engine", "nbbo-engine", "gc-engine",
  "treasury-engine",
]
