[package]
name = "core-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }
arrow = { version = "49.0", default-features = false, features = ["ipc_compression"] }
parquet = { version = "49.0", default-features = false, features = ["arrow", "brotli", "gzip", "snappy", "zstd"] }
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
