[package]
name = "core-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
config = "0.15"
chrono = { version = "0.4", features = ["serde"] }
arrow = { version = "57.0" }
parquet = { version = "57.0", features = ["arrow"] }
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
