[package]
name = "flatfile-ingestion-service"
version = "0.1.0"
edition = "2021"

[dependencies]
flatfile-source = { path = "../flatfile-source" }
core-types = { path = "../core-types" }
metrics = { path = "../metrics" }
storage = { path = "../storage" }
nbbo-cache = { path = "../nbbo-cache" }
greeks-engine = { path = "../greeks-engine" }
classifier = { path = "../classifier" }
greeks-enrichment-service = { path = "../greeks-enrichment-service" }
treasury-ingestion-service = { path = "../treasury-ingestion-service" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
arrow = "57.0"
parquet = { version = "57.0", features = ["arrow"] }
uuid = { version = "1.18", features = ["v4"] }
