[package]
name = "flatfile-source"
version = "0.1.0"
edition = "2021"

[dependencies]
async-compression = { version = "0.4", features = ["gzip", "tokio"] }
async-trait = "0.1"
aws-sdk-s3 = { version = "1.0", features = ["behavior-version-latest"] }
bytes = "1"
chrono = "0.4"
core-types = { path = "../core-types" }
csv = "1.1"
flate2 = "1"
futures = "0.3"
tokio = { version = "1", features = ["fs", "io-util", "sync", "time"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
trading_calendar = "0.1"
