[package]
name = "greeks-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
core-types = { path = "../core-types" }
nbbo-cache = { path = "../nbbo-cache" }
black_scholes = "0.10.1"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
num_cpus = "1.16"
futures = "0.3"
libm = "0.2"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
window-space = { path = "../window-space" }
