[package]
name = "greeks-enrichment-service"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
core-types = { path = "../core-types" }
futures = "0.3"
greeks-engine = { path = "../greeks-engine" }
log = "0.4"
nbbo-cache = { path = "../nbbo-cache" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
storage = { path = "../storage" }
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt", "sync", "time"] }
tokio-stream = "0.1"
treasury-ingestion-service = { path = "../treasury-ingestion-service" }
arrow = "57"
parquet = { version = "57", features = ["arrow"] }

[dev-dependencies]
tempfile = "3.10"
