[package]
name = "m17"
version = "0.1.0"
edition = "2024"

[dependencies]
engine-api = { path = "../engine-api" }
window-space = { path = "../window-space" }
trade-flatfile-engine = { path = "../trade-flatfile-engine" }
nbbo-engine = { path = "../nbbo-engine" }
gc-engine = { path = "../gc-engine" }
treasury-engine = { path = "../treasury-engine" }
trade-ws-engine = { path = "../trade-ws-engine" }
greeks-engine = { path = "../greeks-engine" }
nbbo-cache = { path = "../nbbo-cache" }
aggregations = { path = "../aggregations" }
thiserror = "1"
time = { version = "0.3", default-features = false, features = ["alloc", "formatting", "parsing"] }
core-types = { path = "../core-types" }
ctrlc = "3"
log = "0.4"
prometheus = "0.14"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.7", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1.3"
chrono = { version = "0.4", features = ["clock"] }
arrow = { version = "57", default-features = false, features = ["ipc"] }
parquet = { version = "57", features = ["arrow"] }
crc32fast = "1"
trading-calendar = "0.2"
