[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
core-types = { path = "../core-types" }
prometheus = "0.14"
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.7", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
