[package]
name = "options-universe-ingestion-service"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["sync", "time"] }
url = "2.5"
