[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
classifier = { path = "../classifier" }
core-types = { path = "../core-types" }
data-client = { path = "../data-client" }
flatfile-source = { path = "../flatfile-source" }
futures = "0.3"
metrics = { path = "../metrics" }
nbbo-cache = { path = "../nbbo-cache" }
storage = { path = "../storage" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tui = { path = "../tui" }
