[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
classifier = { path = "../classifier" }
core-types = { path = "../core-types" }
data-client = { path = "../data-client" }
flatfile-source = { path = "../flatfile-source" }
aggregations = { path = "../aggregations" }
futures = "0.3"
log = "0.4"
metrics = { path = "../metrics" }
nbbo-cache = { path = "../nbbo-cache" }
simplelog = "0.12"
storage = { path = "../storage" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tui = { path = "../tui" }
ws-source = { path = "../ws-source" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
