[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
core-types = { path = "../core-types" }
tokio = { version = "1.0", features = ["full"] }
parquet = { version = "57.0", features = ["arrow"] }
arrow = "57.0.0"
thiserror = "2.0.17"
chrono = "0.4.42"
uuid = { version="1.18.1", features=["v4"] }
lru = "0.16.2"

[dev-dependencies]
tempfile = "3.0"
