[package]
name = "trade-ws-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
engine-api = { path = "../engine-api" }
window-space = { path = "../window-space" }
ws-source = { path = "../ws-source" }
core-types = { path = "../core-types" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
futures = "0.3"
parking_lot = "0.12"
thiserror = "1"
arrow = "57.0.0"
parquet = { version = "57.0", features = ["arrow"] }
crc32fast = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tokio-util = { version = "0.7", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
