[package]
name = "treasury-ingestion-service"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.42"
classifier = { path = "../classifier" }
core-types = { path = "../core-types" }
log = "0.4"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["sync", "rt", "time"] }
url = "2.5"
