[package]
name = "ws-source"
version = "0.1.0"
edition = "2021"

[dependencies]
core-types = { path = "../core-types" }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.28"
futures = "0.3"
url = "2.3"
hyper = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"
thiserror = "1.0"
log = "0.4"
